// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuvesAction Avec Message Avertissement 1`] = `
<div
  data-test="preuves-cae_1.2.4"
>
  <p
    className="fr-text--sm !mb-0 py-4"
  >
    Il n'y a pas de document attendu pour cette
     
    sous-action
     du référentiel.
  </p>
  <div
    className="flex flex-col gap-4 py-4"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      className="fr-btn fr-btn--sm fr-btn--secondary fr-btn--icon-left fr-fi-add-line"
      data-test="AddPreuveComplementaire"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      Ajouter un document complémentaire
    </button>
    <div
      className="flex flex-col gap-3"
      data-test="complementaires"
    >
      <div
        data-test="item"
      >
        <div
          className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
        >
          <div
            className="flex gap-2"
          >
            <a
              className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
              data-test="name"
              href="/"
              onClick={[Function]}
            >
              preuve_input.txt (TXT, 34 o)
            </a>
            <span
              className="text-grey-6 leading-6"
            >
              (
              1.1.3
              )
            </span>
          </div>
          <div
            className="invisible group-hover:visible"
          >
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
              onClick={[Function]}
              title="Renommer"
            />
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
              onClick={[Function]}
              title="Décrire"
            />
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
              title="Supprimer"
            />
          </div>
        </div>
        <p
          className="text-xs fr-text-mention--grey mb-1 pl-2"
          data-test="comment"
          onClick={[Function]}
        >
          lala
        </p>
        <p
          className="text-xs fr-text-mention--grey mb-1 pl-2"
        >
          Ajouté
           le 
          06 sept. 2022
           par 
          Yolo Dodo
        </p>
      </div>
    </div>
  </div>
  <div
    className="border-solid border-t border-[#FCC63A] my-4"
  />
  <p
    className="text-xs grey-6 py-4 mb-0"
  >
    Tous les documents ajoutés seront visibles par les membres de la communauté Territoires en Transitions
  </p>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuvesAction Avec Preuves Complementaires 1`] = `
<div
  data-test="preuves-cae_1.2.3.4"
>
  <div
    className="divide-y divide-[#ddd]"
    data-test="attendues"
  >
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Délibération d'engagement dans la Convention des Maires
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.2
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Etude de vulnérabilité au changement climatique
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.3
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  preuve_input.txt (TXT, 34 o)
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
                  onClick={[Function]}
                  title="Renommer"
                />
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
              data-test="comment"
              onClick={[Function]}
            >
              commentaire preuve fichier
            </p>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yolo Dodo
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Agenda 21 / Agenda 2030
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.3
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  dodo
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yolo Dodo
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Etude de vulnérabilité au changement climatique
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.4
            )
          </span>
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  didi
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
              data-test="comment"
              onClick={[Function]}
            >
              commentaire
            </p>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yili Didi
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
  </div>
  <div
    className="border-solid border-t border-[#FCC63A] my-4"
  />
  <div
    className="flex flex-col gap-4 py-4"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      className="fr-btn fr-btn--sm fr-btn--secondary fr-btn--icon-left fr-fi-add-line"
      data-test="AddPreuveComplementaire"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      Ajouter un document complémentaire
    </button>
    <div
      className="flex flex-col gap-3"
      data-test="complementaires"
    >
      <div
        data-test="item"
      >
        <div
          className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
        >
          <div
            className="flex gap-2"
          >
            <a
              className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
              data-test="name"
              href="/"
              onClick={[Function]}
            >
              preuve_input.txt (TXT, 34 o)
            </a>
            <span
              className="text-grey-6 leading-6"
            >
              (
              1.1.3
              )
            </span>
          </div>
          <div
            className="invisible group-hover:visible"
          >
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
              onClick={[Function]}
              title="Renommer"
            />
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
              onClick={[Function]}
              title="Décrire"
            />
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
              title="Supprimer"
            />
          </div>
        </div>
        <p
          className="text-xs fr-text-mention--grey mb-1 pl-2"
          data-test="comment"
          onClick={[Function]}
        >
          lala
        </p>
        <p
          className="text-xs fr-text-mention--grey mb-1 pl-2"
        >
          Ajouté
           le 
          06 sept. 2022
           par 
          Yolo Dodo
        </p>
      </div>
      <div
        data-test="item"
      >
        <div
          className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
        >
          <div
            className="flex gap-2"
          >
            <a
              className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
              data-test="name"
              href="/"
              onClick={[Function]}
            >
              dodo
            </a>
            <span
              className="text-grey-6 leading-6"
            >
              (
              1.1.3
              )
            </span>
          </div>
          <div
            className="invisible group-hover:visible"
          >
            <button
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
              onClick={[Function]}
              title="Décrire"
            />
            <button
              aria-expanded="false"
              aria-haspopup="dialog"
              className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
              onClick={[Function]}
              onKeyDown={[Function]}
              onKeyUp={[Function]}
              onMouseDown={[Function]}
              onPointerDown={[Function]}
              title="Supprimer"
            />
          </div>
        </div>
        <p
          className="text-xs fr-text-mention--grey mb-1 pl-2"
        >
          Ajouté
           le 
          06 sept. 2022
           par 
          Yolo Dodo
        </p>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuvesAction Sans Preuves Attendues 1`] = `
<div
  data-test="preuves-cae_1.2.3"
>
  <p
    className="fr-text--sm !mb-0 py-4"
  >
    Il n'y a pas de document attendu pour cette
     
    action
     du référentiel.
  </p>
  <div
    className="flex flex-col gap-4 py-4"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      className="fr-btn fr-btn--sm fr-btn--secondary fr-btn--icon-left fr-fi-add-line"
      data-test="AddPreuveComplementaire"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      Ajouter un document complémentaire
    </button>
  </div>
</div>
`;

exports[`Storyshots ui/shared/preuves/Bibliotheque/PreuvesAction Sans Preuves Complementaires 1`] = `
<div
  data-test="preuves-cae_1.2.3.4"
>
  <div
    className="divide-y divide-[#ddd]"
    data-test="attendues"
  >
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Délibération d'engagement dans la Convention des Maires
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.2
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Etude de vulnérabilité au changement climatique
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.3
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-file-line fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  preuve_input.txt (TXT, 34 o)
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-edit-line"
                  onClick={[Function]}
                  title="Renommer"
                />
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
              data-test="comment"
              onClick={[Function]}
            >
              commentaire preuve fichier
            </p>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yolo Dodo
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Agenda 21 / Agenda 2030
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.3
            )
          </span>
          <span
            className="ri-information-line font-normal text-center h-4 w-4 text-[1rem] leading-[1rem] text-grey-6 ml-2 cursor-pointer"
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onKeyDown={[Function]}
            onKeyUp={[Function]}
            onMouseDown={[Function]}
            onMouseLeave={[Function]}
            onPointerDown={[Function]}
          />
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  dodo
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yolo Dodo
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
    <div
      className="flex items-start gap-8 py-4"
      data-test="preuve"
    >
      <div
        className="flex flex-1 flex-col"
      >
        <span
          className="fr-text--sm font-medium fr-mb-3v text-black"
          data-test="desc"
        >
          Etude de vulnérabilité au changement climatique
           
          <span
            className="text-grey-6 leading-6"
          >
            (
            1.1.4
            )
          </span>
        </span>
        <div
          className="flex flex-col gap-3"
        >
          <div
            data-test="item"
          >
            <div
              className="flex justify-between group text-sm text-bf500 hover:bg-bf975 px-2 py-1 max-w-2xl mb-0 cursor-pointer"
            >
              <div
                className="flex gap-2"
              >
                <a
                  className="fr-text--sm fr-mb-1v fr-fi-links-fill fr-link--icon-left"
                  data-test="name"
                  href="/"
                  onClick={[Function]}
                >
                  didi
                </a>
              </div>
              <div
                className="invisible group-hover:visible"
              >
                <button
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-icon-quote-line"
                  onClick={[Function]}
                  title="Décrire"
                />
                <button
                  aria-expanded="false"
                  aria-haspopup="dialog"
                  className="ml-1 px-1 w-7 text-sm inline-block text-center fr-fi-delete-line fr-fi-delete-line"
                  onClick={[Function]}
                  onKeyDown={[Function]}
                  onKeyUp={[Function]}
                  onMouseDown={[Function]}
                  onPointerDown={[Function]}
                  title="Supprimer"
                />
              </div>
            </div>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
              data-test="comment"
              onClick={[Function]}
            >
              commentaire
            </p>
            <p
              className="text-xs fr-text-mention--grey mb-1 pl-2"
            >
              Ajouté
               le 
              06 sept. 2022
               par 
              Yili Didi
            </p>
          </div>
        </div>
      </div>
      <button
        aria-expanded="false"
        aria-haspopup="dialog"
        className="fr-btn fr-icon-add-line box-border"
        data-test="AddPreuveReglementaire"
        onClick={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onPointerDown={[Function]}
        title="Ajouter une preuve"
      />
    </div>
  </div>
  <div
    className="border-solid border-t border-[#FCC63A] my-4"
  />
  <div
    className="flex flex-col gap-4 py-4"
  >
    <button
      aria-expanded="false"
      aria-haspopup="dialog"
      className="fr-btn fr-btn--sm fr-btn--secondary fr-btn--icon-left fr-fi-add-line"
      data-test="AddPreuveComplementaire"
      onClick={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onPointerDown={[Function]}
    >
      Ajouter un document complémentaire
    </button>
  </div>
</div>
`;
